test/fail_compilation/fail1.d
struct TestS
{
}

static void test()
{
    Object m;
    m[] = error;
}

